--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.jvnet.hudson.plugins</groupId>
+        <groupId>org.eclipse.hudson.plugins</groupId>
         <artifactId>hudson-plugin-parent</artifactId>
-        <version>2.1.2</version>
+        <version>3.0.0-M2-1</version>
         <relativePath />
     </parent>
 
     <groupId>org.hudsonci.plugins</groupId>
     <artifactId>ssh-slaves</artifactId>
     <packaging>hpi</packaging>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>Hudson SSH Slaves plugin</name>
     <url>http://wiki.hudson-ci.org/display/HUDSON/SSH+Slaves+plugin</url>
     <description>Plugin allows you to manage slaves running on *nix machines over SSH.</description>
@@ -31,7 +31,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jvnet.hudson.main</groupId>
+            <groupId>org.eclipse.hudson</groupId>
             <artifactId>hudson-test-framework</artifactId>
             <scope>test</scope>
             <version>${project.parent.version}</version>
@@ -46,6 +46,12 @@
             <groupId>org.jvnet.hudson</groupId>
             <artifactId>ganymed-ssh-2</artifactId>
             <version>build260</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>trilead-putty-extension</artifactId>
+            <version>1.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <build>
@@ -123,12 +129,21 @@
     </profiles>
 
     <scm>
-        <connection>scm:git:git://github.com/hudson-plugins/ssh-slaves-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:hudson-plugins/ssh-slaves-plugin.git</developerConnection>
-        <url>https://github.com/hudson-plugins/ssh-slaves-plugin</url>
+        <connection>scm:git:git://github.com/hudson3-plugins/ssh-slaves-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:hudson3-plugins/ssh-slaves-plugin.git</developerConnection>
+        <url>https://github.com/hudson3-plugins/ssh-slaves-plugin</url>
     </scm>
 
     <developers>
+        <developer>
+            <id>wjprakash</id>
+            <name>Winston Prakash</name>
+            <roles>
+                <role>
+                    Maintainer
+                </role>
+            </roles>
+        </developer>
         <developer>
             <id>kohsuke</id>
             <name>Kohsuke Kawaguchi</name>
